Resolução do bug do overflow
Resolvi o bug do overflow horizontal.

--- a/Site_Curso_Guanabara/style.css
+++ b/Site_Curso_Guanabara/style.css
@@ -24,6 +24,7 @@
 
 body{
     background-color: #11467e;
+    overflow-x: hidden;
 }
 
 /*Topo do site */
